# serializer version: 1
# name: test__explanation_snapshot
  Explanation:
  	CausalArgs: <class 'rex_xai.config.CausalArgs'>
  	Data: Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
  	 Target:FOUND_CLASS: 209, FOUND_CONF: 0.39424, TARGET_CLASS: n/a, TARGET_CONFIDENCE: n/a
  	prediction function: <function OnnxRunner.gen_prediction_function.<locals>.<lambda> at 0x317698680>
  	ResponsibilityMaps: {209: 1}
  	run statistics: {'total_passing': 41, 'total_failing': 169, 'max_depth_reached': 4, 'avg_box_size': 2747.4166666666665}
  	explanation: <class 'torch.Tensor'> of shape torch.Size([3, 224, 224])
  	final mask: <class 'numpy.ndarray'> of shape (3, 224, 224)
  	explanation confidence: 0.12158
# ---
# name: test__explanation_snapshot.1
  7409862900317702363
# ---
# name: test_extract_analyze[Strategy.Global]
  976237796511694519
# ---
# name: test_extract_analyze[Strategy.Global].1
  dict({
    'area': 0.0551,
    'deletion_curve': 0.0141,
    'entropy': 5.3764,
    'insertion_curve': 0.621,
  })
# ---
# name: test_extract_analyze[Strategy.Spatial]
  250330363344313757
# ---
# name: test_extract_analyze[Strategy.Spatial].1
  dict({
    'area': 0.1093,
    'deletion_curve': 0.0141,
    'entropy': 3.8607,
    'insertion_curve': 0.621,
  })
# ---
